error checking updates to signup page / fix bug on firefox

--- a/client/student/signup/signup.css
+++ b/client/student/signup/signup.css
@@ -11,12 +11,12 @@
 
 .signupContainer #signup-cell1, #signup-cell2{
 	color:black;
-	width: 40px;
+	width: 33px;
 }
 
 .signupContainer #signup-cell3{
 	color: black; 
-	width: 50px;
+	width: 40px;
 }
 
 .signupContainer #signup-carrier{
